<resources>

    <!-- Preference -->
    <string name="app_name">Kadecot Plug-in Hue</string>
    <string name="activity_name">Hue Plug-in Settings</string>
    <string name="main_activity_name">Hue Plug-in Menu</string>

    <!-- Preference -->
    <string name="info_key">info</string>
    <string name="info_summary">Version 1.0</string>
    <string name="info_title">About Hue Plug-in</string>
    <string name="hue_plugin_username_key">hueusername</string>
    <string name="hue_plugin_username_summary"></string>
    <string name="hue_plugin_username_title">User name</string>
    <string name="hue_plugin_username_input">Please input user name</string>
    <string name="hue_plugin_create_username_key">huecreateusername</string>
    <string name="hue_plugin_create_username_summary">Set to usernames of 10 or more characters.</string>
    <string name="hue_plugin_create_username_title">Create User</string>
    <string name="hue_plugin_create_username_input">Click on OK to hold down the button on the bridge.</string>
    <string name="hue_plugin_create_username_success">successful to create a user.</string>
    <string name="hue_plugin_create_username_fail">failed to create a user. </string>
</resources>
